lib: Listen to and access properties through the GObject wrapper

This completes the move to GObject properties started in the earlier
patchset by Bastien (bug #782530). With this change there are no
GVariant users left in bluetooth-client.c.

https://bugzilla.gnome.org/show_bug.cgi?id=790712